--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,8 @@ insert_final_newline = true
 
 [*.json]
 indent_size = 2
+insert_final_newline = false
 
 [*.md]
+insert_final_newline = false
 trim_trailing_whitespace = false
