--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "eva",
   "version": "1.0.0",
   "description": "Eva Project. repository",
-  "main": "server/Main.ts",
+  "main": "src/app.ts",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc:server": "tsc -p ./server/tsconfig.json",
+    "tsc:server": "tsc -p src/tsconfig.json",
     "tsc:public": "tsc -p ./public/tsconfig.json",
-    "server:dev": "npm run tsc:server && node ./build/Main.js",
-    "server:prod": "npm run tsc:server && node ./build/Main.js",
+    "server:dev": "nodemon",
+    "server:prod": "npm run tsc:server && node ./build/server.js",
     "test:audit": "npm audit --audit-level=high"
   },
   "keywords": [],
@@ -21,11 +21,21 @@
   "dependencies": {
     "fastify": "^3.9.2",
     "fastify-static": "^3.3.1",
+    "joi": "^17.3.0",
     "knex": "^0.21.15",
     "pg": "^8.5.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.19"
+    "@types/node": "^14.14.19",
+    "@types/ws": "^7.4.0",
+    "nodemon": "^2.0.7"
+  },
+  "nodemonConfig": {
+    "watch": ["./src"],
+    "ext": "ts",
+    "delay": 2500,
+    "exec": "npm run tsc:server && node --inspect=0.0.0.0 ./build/server.js"
   }
 }
